deploy/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cartapi-app-service
spec:
  selector:
    app.kubernetes.io/name: cartapi-app
  ports:
    - port: 80
      targetPort: 8080
